2004-03-27  Dom Lachowicz <cinamod@hotmail.com>

	* moz-plugin.c: Support a few additional "mime types" for SVG.
	Apparently, Adobe returns image/svg-xml...
	
2004-03-25  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-styles.c: bug 138084
	
2004-03-23  Dom Lachowicz <cinamod@hotmail.com>

	* test-display.c: Use the current SVG as our application icon
	instead of that W3C logo
	
2004-03-23  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-paint-server.c: fixed linear gradient transformations
	
2004-03-22  Christian Schaller <Uraeus@gnome.org>

	* Use original SVG by Chris Lilley as rsvg-viwer logo

2004-03-21  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Check for GnomePrint
	* test-display.c: Save SVG to PNG, print SVG

2004-03-21  Dom Lachowicz <cinamod@hotmail.com>

	* TODO: update
	* NEWS: ditto
	
2004-03-21  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-view.c: Support aspect-ratio preservation, use app icon
	* moz-plugin.c: Better handling of sizes
	* rsvg-file-util.c: Aspect-ratio preservation
	
2004-03-21  Christian Schaller <Uraeus@gnome.org>

	* Add appicon for rsvg-viewer

2004-03-20  Dom Lachowicz <cinamod@hotmail.com>

	* *.c: Better external image scaling policy (mainly for SVG images)
	* *.c: Modifications to the GZip SVG handle
	* *.c: Preparation for gettext and better error handling
	
2004-03-20  Dom Lachowicz <cinamod@hotmail.com>

	* test-display.c, moz-plugin.c: Allow rsvg-view to set a bgcolor other
	than transparent. Make moz plugin set that color to be "white"
	
2004-03-20  Dom Lachowicz <cinamod@hotmail.com>

	* *: "currentColor" and "inherit" colors mostly work. Caveat: they
	don't work for filters and gradients. TODO

2004-03-21  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-bpath-util.c: made a little hack to allow courners to look right
	* rsvg-path.c: allowed relitive coordinates to be used directly after z's
	
2004-03-20  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-css.c: Fix rgb percent handling for 